--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -51,10 +51,10 @@
     <div class="container">
       <h1>Área Corporativa</h1>
 
-      <a href="/estoque">📦 Estoque</a>
-      <a href="/relatorios">📊 Relatórios</a>
-      <a href="/pagar">💰 Pagamentos</a>
-      <a href="/expedicao">🚚 Expedição</a>
+      <a href="/estoque"> Estoque</a>
+      <a href="/relatorios"> Relatórios</a>
+      <a href="/pagar"> Pagamentos</a>
+      <a href="/expedicao"> Expedição</a>
     </div>
   </body>
 </html>
