--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -4,6 +4,19 @@
     <meta charset="utf-8" />
     <title>Login Corporativo</title>
   </head>
+  <style>
+    a.btn {
+      display: inline-block;
+      margin-top: 12px;
+      text-align: center;
+      width: 100%;
+      padding: 10px;
+      border: none;
+      color: #fff;
+      border-radius: 6px;
+    }
+    
+  </style>
   <body
     style="
       font-family: Arial;
@@ -70,7 +83,10 @@
         >
           Entrar
         </button>
+        <!-- <a href="/corporativo/funcionarios/cadastrar" class="btn">Criar Funcionário</a> -->
+        </a>
       </form>
+      
     </div>
   </body>
 </html>
